fix: dark mode heading color

--- a/core/base.css
+++ b/core/base.css
@@ -35,7 +35,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   line-height: var(--ease-leading-tight);
-  color: var(--ease-color-neutral-900);
+  color: var(--ease-color-text);
 }
 
 h1 { font-size: var(--ease-text-4xl); }
